OOLecture3Code/Colour/layout.txt

*** Dumping AST Record Layout
   0 | struct __va_list_tag
   0 |   unsigned int gp_offset
   4 |   unsigned int fp_offset
   8 |   void * overflow_arg_area
  16 |   void * reg_save_area
  sizeof=24, dsize=24, align=8
  nvsize=24, nvalign=8

In file included from src/Colour.cpp:1:
In file included from src/Colour.cpp:1:
In file included from include/Colour.h:3:
In file included from /usr/include/c++/4.2.1/string:46:
In file included from /usr/include/c++/4.2.1/bits/char_traits.h:45:
In file included from /usr/include/c++/4.2.1/bits/stl_algobase.h:68:
In file included from /usr/include/c++/4.2.1/cstdlib:71:
/usr/include/stdlib.h:275:20: error: blocks support disabled - compile with -fblocks or pick a deployment target that supports them
int atexit_b(void (^)(void)) __attribute__((availability(macosx,introduced=10.6)));
                   ^
/usr/include/stdlib.h:277:19: error: blocks support disabled - compile with -fblocks or pick a deployment target that supports them
     size_t, int (^)(const void *, const void *)) __attribute__((availability(macosx,introduced=10.6)));
                  ^
/usr/include/stdlib.h:304:11: error: blocks support disabled - compile with -fblocks or pick a deployment target that supports them
     int (^)(const void *, const void *)) __attribute__((availability(macosx,introduced=10.6)));
          ^
/usr/include/stdlib.h:310:11: error: blocks support disabled - compile with -fblocks or pick a deployment target that supports them
     int (^)(const void *, const void *)) __attribute__((availability(macosx,introduced=10.6)));
          ^
/usr/include/stdlib.h:316:11: error: blocks support disabled - compile with -fblocks or pick a deployment target that supports them
     int (^)(const void *, const void *)) __attribute__((availability(macosx,introduced=10.6)));
          ^
/usr/include/stdlib.h:322:11: error: blocks support disabled - compile with -fblocks or pick a deployment target that supports them
     int (^)(const void *, const void *)) __attribute__((availability(macosx,introduced=10.6)));
          ^

*** Dumping AST Record Layout
   0 | _RuneRange
   0 |   int __nranges
   8 |   _RuneEntry * __ranges
  sizeof=16, dsize=16, align=8
  nvsize=16, nvalign=8


*** Dumping AST Record Layout
   0 | _RuneLocale
   0 |   char [8] __magic
   8 |   char [32] __encoding
  40 |   __darwin_rune_t (*)(const char *, __darwin_size_t, const char **) __sgetrune
  48 |   int (*)(__darwin_rune_t, char *, __darwin_size_t, char **) __sputrune
  56 |   __darwin_rune_t __invalid_rune
  60 |   __uint32_t [256] __runetype
1084 |   __darwin_rune_t [256] __maplower
2108 |   __darwin_rune_t [256] __mapupper
3136 |   _RuneRange __runetype_ext
3136 |     int __nranges
3144 |     _RuneEntry * __ranges
  sizeof=16, dsize=16, align=8
  nvsize=16, nvalign=8

3152 |   _RuneRange __maplower_ext
3152 |     int __nranges
3160 |     _RuneEntry * __ranges
  sizeof=16, dsize=16, align=8
  nvsize=16, nvalign=8

3168 |   _RuneRange __mapupper_ext
3168 |     int __nranges
3176 |     _RuneEntry * __ranges
  sizeof=16, dsize=16, align=8
  nvsize=16, nvalign=8

3184 |   void * __variable
3192 |   int __variable_len
3196 |   int __ncharclasses
3200 |   _RuneCharClass * __charclasses
  sizeof=3208, dsize=3208, align=8
  nvsize=3208, nvalign=8


*** Dumping AST Record Layout
   0 | class std::locale::_Impl
   0 |   _Atomic_word _M_refcount
   8 |   const class std::locale::facet ** _M_facets
  16 |   size_t _M_facets_size
  24 |   const class std::locale::facet ** _M_caches
  32 |   char ** _M_names
  sizeof=40, dsize=40, align=8
  nvsize=40, nvalign=8


*** Dumping AST Record Layout
   0 | struct std::ios_base::_Words
   0 |   void * _M_pword
   8 |   long _M_iword
  sizeof=16, dsize=16, align=8
  nvsize=16, nvalign=8


*** Dumping AST Record Layout
   0 | struct std::money_base::pattern
   0 |   char [4] field
  sizeof=4, dsize=4, align=1
  nvsize=4, nvalign=1

6 errors generated.
